--- a/mp_kq/app.json
+++ b/mp_kq/app.json
@@ -4,7 +4,8 @@
     "pages/logs/logs",
     "components/dialog/dialog",
     "pages/dialog/dialog",
-    "pages/list/list"
+    "pages/list/list",
+    "pages/grid/grid"
   ],
   "window": {
     "backgroundTextStyle": "light",
