--- a/mp_kq/project.config.json
+++ b/mp_kq/project.config.json
@@ -40,12 +40,19 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "list",
 					"pathName": "pages/list/list",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "grid",
+					"pathName": "pages/grid/grid",
 					"scene": null
 				}
 			]
