--- a/mp_kq/app.json
+++ b/mp_kq/app.json
@@ -12,7 +12,9 @@
     "pages/radio/radio",
     "pages/checkbox/checkbox",
     "pages/searchbar/searchbar",
-    "pages/stepper/stepper"
+    "pages/stepper/stepper",
+    "pages/tabs/tabs",
+    "pages/tabbar/tabbar"
   ],
   "window": {
     "backgroundTextStyle": "light",
