--- a/mp_kq/project.config.json
+++ b/mp_kq/project.config.json
@@ -40,7 +40,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 13,
+			"current": 15,
 			"list": [
 				{
 					"id": -1,
@@ -137,6 +137,20 @@
 					"id": 13,
 					"name": "half-screen-dialog",
 					"pathName": "pages/half-screen-dialog/half-screen-dialog",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "modal",
+					"pathName": "pages/modal/modal",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "dialog",
+					"pathName": "pages/dialog/dialog",
 					"query": "",
 					"scene": null
 				}
