--- a/mp_kq/project.config.json
+++ b/mp_kq/project.config.json
@@ -40,7 +40,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 15,
+			"current": 17,
 			"list": [
 				{
 					"id": -1,
@@ -152,6 +152,19 @@
 					"name": "dialog",
 					"pathName": "pages/dialog/dialog",
 					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "badge",
+					"pathName": "pages/badge/badge",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "icon",
+					"pathName": "pages/icon/icon",
 					"scene": null
 				}
 			]
