--- a/mp_kq/project.config.json
+++ b/mp_kq/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.2",
-	"appid": "wx188969dfe3b8c110",
+	"appid": "wx115b5f4157e136c1",
 	"projectname": "mp_kq",
 	"debugOptions": {
 		"hidedInDevtools": []
